Fix: Resolve navigation loops in Demo Mode and signup query errors (#3058)
* Fix: Resolve navigation loops and signup query errors

* Fix: Address PR review feedback (update tests and docs)

* Fix: Improve test robustness for emailAddress exclusion

* Format Dart files

* Fix: Resolve null argument error in menu_page_test.dart

* Fix: Resolve CI failures (imports, formatting, and linting)

* Fix: Resolve deprecated Flutter parameters (initialValue, activeThumbColor)

* Fix: Resolve MaterialStateProperty deprecation and sort dependencies

* Fix: Replace deprecated MaterialStateProperty with WidgetStateProperty

* Fix: Handle JSON errors, null safety, and network exceptions

* Fix: Resolve dependency conflict for _fe_analyzer_shared

* Fix: Resolve custom lint violations in AppLocalizations

* Fix: Resolve custom lint violations in AppLocalizations

* Fix: Correct documentation formatting in AppLocalizations

* Fix: Update test mocks and format code

* Fix: Resolve Mockito type errors in CreateGroupBottomSheetTest

* Fix: Remove problematic default stub in CreateGroupBottomSheetTest

* Fix: Remove problematic default stub in CreateGroupBottomSheetTest

* Fix: Resolve AppLocalization initialization and dependency constraints

* chore: revert out-of-scope changes and fix dependencies

* chore: remove out-of-scope files from PR (group_chat, switch widgets)

* custom lint builder version updated

* chore: remove out-of-scope files from PR (group_chat, switch widgets)

* chore: restore out-of-scope files to match develop (remove from PR)

* fix: resolve CI lockfile error and gradle build issue

* fix: resolve dependency conflict (unpin custom_lint, update talawa_lint)

* fix: resolve dependency conflict by downgrading custom_lint to ^0.6.0

* fix: resolve dependency conflict by downgrading custom_lint and analyzer_plugin

* fix: downgrade build_runner to ^2.4.13 to resolve conflict with custom_lint ^0.6.0

* fix: resolve analysis errors in talawa_lint and downgrade build_r

--- a/lang/en.json
+++ b/lang/en.json
@@ -329,5 +329,6 @@
   "Upcoming": "Upcoming",
   "Ended": "Ended",
   "Active": "Active",
-  "Unnamed Organization": "Unnamed Organization"
+  "Unnamed Organization": "Unnamed Organization",
+  "Try Demo": "Try Demo"
 }
