--- a/lang/fr.json
+++ b/lang/fr.json
@@ -329,5 +329,6 @@
   "Upcoming": "À venir",
   "Ended": "Terminée",
   "Active": "Active",
-  "Unnamed Organization": "Organisation Sans Nom"
+  "Unnamed Organization": "Organisation Sans Nom",
+  "Try Demo": "Essayer la démo"
 }
