--- a/lang/hi.json
+++ b/lang/hi.json
@@ -329,5 +329,6 @@
   "Upcoming": "आगामी",
   "Ended": "समाप्त",
   "Active": "सक्रिय",
-  "Unnamed Organization": "बिना नाम का संगठन"
+  "Unnamed Organization": "अनाम संगठन",
+  "Try Demo": "डेमो आज़माएं"
 }
