--- a/lang/ja.json
+++ b/lang/ja.json
@@ -329,5 +329,6 @@
   "Upcoming": "予定",
   "Ended": "終了",
   "Active": "アクティブ",
-  "Unnamed Organization": "無名の組織"
+  "Unnamed Organization": "無名の組織",
+  "Try Demo": "デモを試す"
 }
