refactor: Cleanup App Tour UI and consistent localization

--- a/lang/en.json
+++ b/lang/en.json
@@ -241,7 +241,7 @@
   "You are all set to go lets get you in": "You are all set to go lets get you in",
   "App Tour": "App Tour",
   "Start": "Start",
-  "Skip": "Skip",
+  "SKIP": "SKIP",
   "Posts": "Posts",
   "Tasks": "Tasks",
   "Or": "Or",
