fix: Rename Skip key to SKIP in all language files

--- a/lang/de.json
+++ b/lang/de.json
@@ -241,7 +241,7 @@
   "You are all set to go lets get you in": "Sie sind bereit zu gehen, lassen Sie uns Sie hereinbringen",
   "App Tour": "App-Tour",
   "Start": "Starten",
-  "Skip": "Überspringen",
+  "SKIP": "Überspringen",
   "Posts": "Beiträge",
   "Tasks": "Aufgaben",
   "Or": "Oder",
