--- a/lang/es.json
+++ b/lang/es.json
@@ -241,7 +241,7 @@
   "You are all set to go lets get you in": "Ya estás listo para irte, vamos a meterte",
   "App Tour": "Tour de la aplicación",
   "Start": "Comenzar",
-  "Skip": "Saltar",
+  "SKIP": "Saltar",
   "Posts": "Publicaciones",
   "Tasks": "Tareas",
   "Or": "O",
