--- a/lang/fr.json
+++ b/lang/fr.json
@@ -241,7 +241,7 @@
   "You are all set to go lets get you in": "Vous êtes prêt à partir, laissez-nous vous faire entrer",
   "App Tour": "Visite guidée de l'application",
   "Start": "Démarrer",
-  "Skip": "Ignorer",
+  "SKIP": "Ignorer",
   "Posts": "Publications",
   "Tasks": "Tâches",
   "Or": "Ou",
