--- a/lang/hi.json
+++ b/lang/hi.json
@@ -241,7 +241,7 @@
   "You are all set to go lets get you in": "आप सभी सेट हैं जाने के लिए, चलो आपको भेजते हैं",
   "App Tour": "ऐप टूर",
   "Start": "शुरू करें",
-  "Skip": "छोड़ दें",
+  "SKIP": "छोड़ दें",
   "Posts": "पोस्ट्स",
   "Tasks": "टास्क",
   "Or": "या",
