--- a/lang/ja.json
+++ b/lang/ja.json
@@ -241,7 +241,7 @@
   "You are all set to go lets get you in": "あなたは完全に準備が整いました。入れてあげましょう。",
   "App Tour": "アプリトール",
   "Start": "開始",
-  "Skip": "スキップ",
+  "SKIP": "スキップ",
   "Posts": "投稿",
   "Tasks": "タスク",
   "Or": "または",
