--- a/lang/pt.json
+++ b/lang/pt.json
@@ -241,7 +241,7 @@
   "You are all set to go lets get you in": "Você está tudo pronto para ir, vamos te levar",
   "App Tour": "Tour do aplicativo",
   "Start": "Iniciar",
-  "Skip": "Pular",
+  "SKIP": "Pular",
   "Posts": "Postagens",
   "Tasks": "Tarefas",
   "Or": "Ou",
