--- a/lang/zh.json
+++ b/lang/zh.json
@@ -241,7 +241,7 @@
   "You are all set to go lets get you in": "您已经准备好出发了，让我们带您进去",
   "App Tour": "应用导览",
   "Start": "开始",
-  "Skip": "跳过",
+  "SKIP": "跳过",
   "Posts": "帖子",
   "Tasks": "任务",
   "Or": "或者",
